tests/fixtures/positive/naming/ObjectPropertyNaming.kt
package com.example.naming

object Config {
    val __x = 1
    val _badName = "wrong"
}

class MyClass {
    companion object {
        val __doubleUnderscore = 42
    }
}
