tests/fixtures/negative/naming/ObjectPropertyNaming.kt
package com.example.naming

object Config {
    const val MY_CONST = 1
    val propertyName = "good"
}

class MyClass {
    companion object {
        const val COMPANION_CONST = 42
        val anotherProperty = "ok"
    }
}
